--- a/static/base.html
+++ b/static/base.html
@@ -418,29 +418,21 @@
                                     </div>
                                 </div>
                             </div>
+
                             <div class="panel panel-default askme-panel">
-                                <div class="panel-heading"><h4>Answer</h4></div>
                                 <div class="panel-body">
                                     <form class="form-horizontal">
+                                        <label for="basic-url">Type your answer:</label>
                                         <div class="form-group">
-                                            <label class="control-label col-md-2" for="login">Text:</label>
-                                            <div class="col-md-10">
+                                            <div class="col-md-12">
                                                 <textarea class="form-control askme-textarea" rows="5" id="answer" placeholder ="enter text" maxlength="512"></textarea>
                                             </div>
                                         </div>
                                         <div class="alert alert-danger" role="alert">Sorry, text area is empty!</div>
-                                        <div class="form-group">
-                                            <div class="col-md-offset-2 col-md-10">
-                                                <button type="submit" class="btn btn-default">Answer</button>
-                                            </div>
-                                        </div>
+                                        <button type="submit" class="btn btn-default">Answer</button>
                                     </form>
                                 </div>
                             </div>
-
-
-
-
 
 
 
